uploaded to pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = streaming_indicators
-version = 0.0.1
+version = 0.0.2
 author = Rishabh Gupta
 author_email = rishabhg1997@gmail.com
 description = A python library for computing technical analysis indicators on streaming data.
@@ -9,7 +9,7 @@ long_description_content_type = text/markdown
 url = https://github.com/mr-easy/streaming_indicators
 project_urls =
     Bug Tracker = https://github.com/mr-easy/streaming_indicators/issues
-    repository = https://github.com/mr-easy/streaming_indicators
+    Code = https://github.com/mr-easy/streaming_indicators
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -17,11 +17,11 @@ classifiers =
 
 [options]
 package_dir =
-    = streaming_indicators
+    = src
 packages = find:
 python_requires = >=3.4
 install_requires =
     numpy >= 1.13.3
 
 [options.packages.find]
-where = streaming_indicators
+where = src
