--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = streaming_indicators
-version = 0.0.7
+version = 0.0.8
 author = Rishabh Gupta
 author_email = rishabhg1997@gmail.com
 description = A python library for computing technical analysis indicators on streaming data.
@@ -22,6 +22,7 @@ packages = find:
 python_requires = >=3.4
 install_requires =
     numpy >= 1.13.3
+    pandas_ta >=  0.3.14b
 
 [options.packages.find]
 where = src
