--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = streaming_indicators
-version = 0.0.9
+version = 0.0.10
 author = Rishabh Gupta
 author_email = rishabhg1997@gmail.com
 description = A python library for computing technical analysis indicators on streaming data.
@@ -22,7 +22,7 @@ packages = find:
 python_requires = >=3.4
 install_requires =
     numpy >= 1.13.3
-    pandas_ta >=  0.3.14b
+    pandas >= 2.0.0
 
 [options.packages.find]
 where = src
