--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,13 @@ install_requires =
 
 [options.packages.find]
 where = src
+
+[tool:pytest]
+# where pytest will look for tests
+testpaths =
+    tests
+# match your test filenames
+python_files = test_*.py
+# add src/ to PYTHONPATH so “import streaming_indicators” resolves to your local code
+python_paths =
+    src
